src/app/components/single-column/_index.scss
/*
 *  SINGLE COLUMN
 *  Column of centered text with header
 *
 *  Notes: The colours used for title and hr are defaults. Overrides are used for case studies.
 *  TODO: This is used for the top of case study pages. Ideally it sholdn't be used, that should be a
 *  header/title component maybe. Also clarification is needed (with a designer) about when and where
 *  the 'content' is text-align left/center;
 */

.single-column {
  padding: 30px 6.25%;

  .wrapper {
    max-width: 680px;
    margin: 0 auto;
  }

  .title {
    color: $marshPassion;
    max-width: 820px;
    text-align: center;
  }

  hr {
    width: 120px;
    margin: 30px auto;
    border: 2px solid $mare;
  }

  .content {
    max-width: 680px;
    margin: 0 auto;
    font-size: 20px;
    text-align: left;
  }

  &:first-of-type {
    .title {
      font-size: 36px;
    }

    .content {
      text-align: center;
    }
  }

  &.intro {
    padding: 118px 6.25% 55px;
  }
}

@media screen and (min-width: $bp-small) {
  .single-column {
    &.intro {
      padding: 168px 6.25% 100px;
    }
  }
}

@media screen and (min-width: $bp-medium) {
  .single-column {
    padding-top: 50px;
    padding-bottom: 50px;

    &:first-of-type {
      min-height: 300px;

      .title {
        font-size: 40px;
      }
    }
  }
}

@media screen and (min-width: $bp-large) {
  .single-column {
    padding-top: 100px;
    padding-bottom: 100px;

    &:first-of-type {
      min-height: 400px;

      .title {
        font-size: 60px;
      }
    }
  }
}

